Implementação do caso de uso Find Athletes Responsible By CPF (controller - route - documentation (Swagger)).
